Update attachment keyboard based on payment availability in CFv2.